<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    card_view:cardCornerRadius="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_eventdetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_eventdetail_titel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titel"
                    android:layout_gravity="center"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="24sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_categorie"
                    android:textColor="@color/material_blue_grey_800"
                    android:textStyle="bold|italic"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/tv_eventdetail_categorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tekst"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:id="@+id/iv_eventdetail_foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/tv_eventdetail_omschrijving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/omschrijving"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tv_eventdetail_organisatie_links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_organisatie"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/tv_eventdetail_organisatie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tekst"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_adres_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_adres"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:id="@+id/tv_eventdetail_adres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tekst"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_prijs_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prijs"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:id="@+id/tv_eventdetail_prijs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tekst"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_prijs_korting_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/korting"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:id="@+id/tv_eventdetail_prijs_korting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tekst"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"/>

                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:id="@+id/iv_rolstoel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/ic_accessible_black_24dp"
                            />

                        <TextView
                            android:id="@+id/tv_eventdetail_rolstoel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tekst"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_website_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <ImageView
                            android:id="@+id/iv_website"
                            android:src="@drawable/ic_web_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_archief_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/archief"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <ImageView
                            android:id="@+id/iv_youtube"
                            android:src="@drawable/ic_play_circle_outline_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_eventdetail_route_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_route"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <ImageView
                            android:id="@+id/iv_route"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>