<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    card_view:cardCornerRadius="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@drawable/gf60x60"/>

                <TextView
                    android:id="@+id/tv_dag_datum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_margin="7dp"
                    android:layout_gravity="center|right"
                    android:text="@string/verkorte_dag_notatie"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">

                    <TableRow
                        android:layout_margin="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categorie"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="italic"
                            android:layout_gravity="left" />

                        <ImageView
                            android:id="@+id/iv_categorie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_folder_black_24dp"
                            android:tint="@color/material_blue_grey_950"
                            android:layout_gravity="right"
                            android:layout_marginLeft="-15dp"
                            />
                    </TableRow>

                    <TableRow
                        android:layout_margin="7dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/locatie"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="italic"
                            android:layout_gravity="left"
                            />

                        <ImageView
                            android:id="@+id/iv_locatie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:tint="@color/material_blue_grey_950"
                            android:layout_gravity="right"
                            android:layout_marginLeft="-15dp"
                            />
                    </TableRow>

                    <TableRow
                        android:layout_margin="7dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tijdstip"
                            android:textColor="@color/material_blue_grey_800"
                            android:textSize="18sp"
                            android:textStyle="italic"
                            android:layout_gravity="left"
                            />

                        <ImageView
                            android:id="@+id/iv_tijdstip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_watch_black_24dp"
                            android:tint="@color/material_blue_grey_950"
                            android:layout_gravity="right"
                            android:layout_marginLeft="-15dp"
                            />

                    </TableRow>

                </TableLayout>


            </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>