<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/white"
tools:context="be.davygevaert.gentsefeesten.InfoActivity">

<!-- refer to toolbar.xml -->
<include
    android:id="@+id/toolbar_info"
    layout="@layout/toolbar" />

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_omschrijving"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_davy_gevaert"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/material_blue_grey_800"
            android:text="@string/info_bezigheid"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_info_twitter"
                android:src="@drawable/ic_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp" />

            <ImageView
                android:id="@+id/iv_info_linkedin"
                android:src="@drawable/ic_linkedin_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/material_blue_grey_800"
            android:text="@string/info_sourcecode"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>

            <ImageView
                android:id="@+id/iv_info_sourcecode"
                android:src="@drawable/ic_web_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>






    </LinearLayout>

    <!-- fragment laatst plaatsen zodat navigation drawer correct werkt met de listeners, in deze xml vervangt de linearlayout met bijhorende textviews en imageviews de recyclerview tov de andere xml layout van andere activities  -->
    <fragment
        android:id="@+id/nav_drawer_fragment_activity_info"
        android:name="be.davygevaert.gentsefeesten.fragment.NavigationDrawerFragment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer"
        />

</android.support.v4.widget.DrawerLayout>

</LinearLayout>




